--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "tsc-watch --onSuccess \"node dist/index.js\" ",
+    "dev": "vercel dev",
     "start": "node dist/index.js",
     "build": "tsc -p ."
   },
