--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "vercel dev",
+    "dev": "tsc-watch --onSuccess \"node dist/index.js\" ",
     "start": "node dist/index.js",
     "build": "tsc -p ."
   },
@@ -16,7 +16,7 @@
     "groq-sdk": "^0.37.0"
   },
   "devDependencies": {
-    "@types/node": "^25.0.3",
+    "@types/node": "^25.0.3",    
     "nodemon": "^3.1.11",
     "ts-node": "^10.9.2",
     "tsc-watch": "^6.2.1",
